--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
 
     <modules>
         <module>monolith</module>
+        <module>user-activity</module>
     </modules>
 
     <dependencyManagement>
