--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
     <modules>
         <module>monolith</module>
         <module>user-activity</module>
+        <module>gateway</module>
     </modules>
 
     <dependencyManagement>
