3 - Setting stat exercise

--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>monolith</module>
         <module>user-activity</module>
         <module>gateway</module>
+        <module>stats</module>
     </modules>
 
     <dependencyManagement>
