4 - Setting kafka exercise

--- a/monolith/pom.xml
+++ b/monolith/pom.xml
@@ -54,6 +54,20 @@
             <artifactId>spring-boot-devtools</artifactId>
             <optional>true</optional>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka</artifactId>
+        </dependency>
+
+        <!--All dependencies for kafka and messaging-->
+        <dependency>
+            <groupId>com.homics.commons-messaging</groupId>
+            <artifactId>commons-messaging</artifactId>
+            <version>1.0.0</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/../commons-messaging/commons-messaging-1.0.0.jar</systemPath>
+        </dependency>
     </dependencies>
 
     <build>
