5 - Setting stock exercise

--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>user-activity</module>
         <module>gateway</module>
         <module>stats</module>
+        <module>stock</module>
     </modules>
 
     <dependencyManagement>
