--- a/user-activity/src/main/resources/application.yaml
+++ b/user-activity/src/main/resources/application.yaml
@@ -6,21 +6,17 @@ server:
 
 spring:
 
-  # Enable h2 console
-  h2:
-    console:
-      enabled: true
-      path: /console
-
   # Set-up datasource
   datasource:
-    url: jdbc:h2:mem:useractivitydb
+    url: jdbc:h2:tcp://homics-db:1521/useractivitydb
     driverClassName: org.h2.Driver
     username: admin
     password: admin
 
   jpa:
     database-platform: org.hibernate.dialect.H2Dialect
+    hibernate:
+      ddl-auto: update
 
   application:
     name: user
