--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -8,6 +8,13 @@ spring:
   application:
     name: zuul-server
 
+# Todo 3: Edit the url with the user application's name in the docker-compose
+# Url used for restTemplate calls to the application user
+app:
+  user:
+    url: http://localhost:9001
+
+# Todo 3: Edit the zuul-urls with the app's name in the docker-compose
 # Zuul routing
 zuul:
   routes:
