--- a/monolith/pom.xml
+++ b/monolith/pom.xml
@@ -62,11 +62,9 @@
 
         <!--All dependencies for kafka and messaging-->
         <dependency>
-            <groupId>com.homics.commons-messaging</groupId>
+            <groupId>commons-messaging</groupId>
             <artifactId>commons-messaging</artifactId>
             <version>1.0.0</version>
-            <scope>system</scope>
-            <systemPath>${project.basedir}/../commons-messaging/commons-messaging-1.0.0.jar</systemPath>
         </dependency>
     </dependencies>
 
