6 - Correction for exercise 6 on Containers

--- a/docker/gateway/Dockerfile
+++ b/docker/gateway/Dockerfile
@@ -1,2 +1,7 @@
-# Todo 1: Fill this Dockerfile for gateway
-# You can use the image "openjdk:8u222-jre"
+FROM openjdk:8u222-jre
+
+COPY jars/gateway-0.0.1-SNAPSHOT.jar /gateway-0.0.1-SNAPSHOT.jar
+
+EXPOSE 8080
+
+CMD ["java", "-jar", "/gateway-0.0.1-SNAPSHOT.jar"]
