--- a/docker/user-activity/Dockerfile
+++ b/docker/user-activity/Dockerfile
@@ -1,2 +1,7 @@
-# Todo 2: Fill this Dockerfile for user-activity
-# You can use the image "openjdk:8u222-jre"
+FROM openjdk:8u222-jre
+
+COPY jars/user-activity-0.0.1-SNAPSHOT.jar /user-activity-0.0.1-SNAPSHOT.jar
+
+EXPOSE 9001
+
+CMD ["java", "-jar", "/user-activity-0.0.1-SNAPSHOT.jar"]
