--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -13,37 +13,80 @@ services:
     volumes:
       - /tmp/data/homics-data:/opt/h2-data
 
-  # Todo 3: Fill the gateway and user parts of the compose to deploy those microservices
-
   # Gateway
   gateway:
+    image: handson/gateway:0.0.1-SNAPSHOT
+    container_name: homics-gateway
+    expose:
+      - "8080"
+    ports:
+      - "8080:8080"
 
   # User
   user:
-
-
-
-  # Todo Bonus: Deploy the full marketplace, add monolith / stats / stock
+    image: handson/user-activity:0.0.1-SNAPSHOT
+    container_name: homics-user
+    expose:
+      - "9001"
+    ports:
+      - "9001:9001"
+    depends_on:
+      - homics-db
 
   # Kafka
-  # Todo: uncomment below when you need to use Kafka (used by monolith / stats / stock)
-#  zookeeper:
-#    image: wurstmeister/zookeeper
-#    container_name: homics-zookeeper
-#    ports:
-#      - "2181:2181"
-#  kafka:
-#    image: wurstmeister/kafka:1.0.0
-#    container_name: homics-kafka
-#    hostname: kafka
-#    expose:
-#      - "9092"
-#    ports:
-#      - "9092:9092"
-#    environment:
-#      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
-#      KAFKA_ADVERTISED_HOST_NAME: kafka
-#      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-#      KAFKA_NUM_PARTITIONS: 1
-#    volumes:
-#      - /var/run/docker.sock:/var/run/docker.sock
+  zookeeper:
+    image: wurstmeister/zookeeper
+    container_name: homics-zookeeper
+    ports:
+      - "2181:2181"
+  kafka:
+    image: wurstmeister/kafka:1.0.0
+    container_name: homics-kafka
+    hostname: kafka
+    expose:
+      - "9092"
+    ports:
+      - "9092:9092"
+    environment:
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
+      KAFKA_ADVERTISED_HOST_NAME: kafka
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_NUM_PARTITIONS: 1
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+
+  # Monolith
+  monolith:
+    image: handson/monolith:0.0.1-SNAPSHOT
+    container_name: homics-monolith
+    expose:
+      - "8090"
+    ports:
+      - "8090:8090"
+    depends_on:
+      - homics-db
+      - kafka
+
+  # Stats
+  stats:
+    image: handson/stats:0.0.1-SNAPSHOT
+    container_name: homics-stats
+    expose:
+      - "9002"
+    ports:
+      - "9002:9002"
+    depends_on:
+      - homics-db
+      - kafka
+
+  # Stock
+  stock:
+    image: handson/stock:0.0.1-SNAPSHOT
+    container_name: homics-stock
+    expose:
+      - "9003"
+    ports:
+      - "9003:9003"
+    depends_on:
+      - homics-db
+      - kafka
