--- a/kube/gateway/deployment.yaml
+++ b/kube/gateway/deployment.yaml
@@ -1,2 +1,22 @@
 apiVersion: apps/v1
-# TODO 1: Create a deployment for the gateway
+kind: Deployment
+metadata:
+  name: gateway-deployment
+  labels:
+    app: gateway
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: gateway
+  template:
+    metadata:
+      labels:
+        app: gateway
+    spec:
+      containers:
+      - name: gateway
+        image: homics/gateway:1.0.0
+        imagePullPolicy: IfNotPresent
+        ports:
+        - containerPort: 8080
