--- a/kube/user/service.yaml
+++ b/kube/user/service.yaml
@@ -1,2 +1,13 @@
 apiVersion: v1
-# TODO 4: Create a Service so the user-activity can be access on 9001
+kind: Service
+metadata:
+  name: user
+spec:
+  type: LoadBalancer
+  ports:
+    - nodePort: 31319
+      port: 9001
+      protocol: TCP
+      targetPort: 9001
+  selector:
+    app: user
